--- a/index.html
+++ b/index.html
@@ -15,29 +15,72 @@
 
 <body>
     <header>
-        <h2 id="sehlvet">SEHLVET</h2>
-        <a href="">Home</a>
-        <a href="">Colections</a>
-        <a href="" >Brands</a>
-        <a href="" id="about-us">About Us</a>
-
-        <a href="" id="Bag"><img src="./Assets/bookmark.svg" id="bookmark"></a>
-        <a href=""><img src="./Assets/Bag.svg" id="Bag"></a>
+        <div id="header">
+            <h2 id="sehlvet">SEHLVET</h2>
+            <div id="links">
+                <a href="">Home</a>
+                <a href="">Colections</a>
+                <a href="" id="brands">Brands</a>
+                <a href="" id="about-us">About Us</a>
+            </div>
+            <div>
+                <a href=""><img src="./Assets/bookmark.svg" id="bookmark"></a>
+                <a href=""><img src="./Assets/Bag.svg" id="Bag"></a>
+            </div>
+        </div>
     </header>
 
     <h1 id="Elevate">Elevate Style, <br>
-    Embrace Story</h1> 
+        Embrace Story</h1>
 
-    <h5>We provide the largest clothing collection for any season. You can <br> choose trendy or classy design according to your
-    preferences. Our <br> services are super fast and we update within 24 hours.</h5>
+    <h5>We provide the largest clothing collection for any season. You can <br> choose trendy or classy design according
+        to your
+        preferences. Our <br> services are super fast and we update within 24 hours.</h5>
 
-    <button id="main-button"><p>Explore</p><img src="./Assets/arrow.svg" alt="imagem de uma seta" id="seta"></button>
+    <button id="main-button">
+        <p>Explore</p><img src="./Assets/arrow.svg" alt="imagem de uma seta" id="seta">
+    </button>
 
     <img src="./Assets/fashion-portrait-young-elegant-woman 1.png" alt="Foto de uma mulher de vestido e jaqueta"
         id="mulher-de-jaqueta">
 
-        <div id="div1"></div>
-        <div id="div2"></div>
+    <div id="div1"></div>
+    <div id="div2"></div>
+
+    <h1 id="trending">Trending Collections</h1>
+    <h2 id="have">Have a look on what’s trending now!</h2>
+    <div id="formal">
+        <img src="./Assets/nikita-kachanovsky-GY6ViMxtmDE-unsplash.png" alt="">
+        <h2>Formal Shirt For Woman</h2>
+        <div class="prices">
+            <p>Price:$25.38</p>
+            <img id="group17" src="./Assets/group17.svg" alt="">
+            <img id="group29" src="./Assets/group29.svg" alt="">
+        </div>
+    </div>
+
+    <div id="black">
+        <img src=".//Assets/nathan-dumlao-aT2Voo0gyVE-unsplash.png" alt="">
+        <h2>Formal Shirt For Woman</h2>
+        <div class="prices">
+            <p>Price:$08.50</p>
+            <p id="car"><s>$12.28</s></p>
+            <img id="group17-2" src="./Assets/group17.svg" alt="">
+            <img id="group29-2" src="./Assets/group29.svg" alt="">
+        </div>
+    </div>
+
+    <div id="yellow">
+        <img src="./Assets/nikita-kachanovsky.png" alt="">
+        <h2>Formal Shirt For Woman</h2>
+        <div class="prices">
+            <p>Price:$14.55</p>
+            <img id="group17-3" src="./Assets/group17.svg" alt="">
+            <img id="group29-3" src="./Assets/group29.svg" alt="">
+        </div>
+    </div>
+
+    <button id="view"><p>View All</p> <img src="./Assets/arrow-2.svg" alt=""></button>
 
 </body>
 
