--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
     <div id="div1"></div>
     <div id="div2"></div>
 
+    <!-- pg 2 -->
+
     <h1 id="trending">Trending Collections</h1>
     <h2 id="have">Have a look on what’s trending now!</h2>
     <div id="formal">
@@ -81,6 +83,31 @@
     </div>
 
     <button id="view"><p>View All</p> <img src="./Assets/arrow-2.svg" alt=""></button>
+
+    <!-- pg 3 -->
+
+    <h1 id="summer">Summer Collections</h1>
+
+    <h5 id="consider">We consider your look and comfort on scorching weather.</h5>
+
+    <h5 id="provide">
+        We provide the largest clothing collection for any season. You can choose<br>
+        trendy or classy design according to your
+        preferences. Our services are<br>
+        super fast and we update within 24 hours.
+    </h5>
+
+    <h5 id="main-aim">Our main aim is to serve our customer with better quality product.<br>
+        We try to understand their needs and provide them within a short<br>
+        period of time.
+    </h5>
+
+    <img src="./Assets/Rectangle 14.png" alt="" id="rec14">
+    <img src="./Assets/Rectangle 13.png" alt="" id="rec13">
+    <img src="./Assets/Rectangle 15.png" alt="" id="rec15">
+
+    <button id="explore1"><p>Explore</p><img src="./Assets/arrow-2.svg" alt=""></button>
+
 
 </body>
 
