add body 4, final and start footer

--- a/index.html
+++ b/index.html
@@ -15,18 +15,16 @@
 
 <body>
     <header>
-        <div id="header">
-            <h2 id="sehlvet">SEHLVET</h2>
-            <div id="links">
-                <a href="">Home</a>
-                <a href="">Colections</a>
-                <a href="" id="brands">Brands</a>
-                <a href="" id="about-us">About Us</a>
-            </div>
-            <div>
-                <a href=""><img src="./Assets/bookmark.svg" id="bookmark"></a>
-                <a href=""><img src="./Assets/Bag.svg" id="Bag"></a>
-            </div>
+        <h2 id="sehlvet">SEHLVET</h2>
+        <div id="links">
+            <a href="">Home</a>
+            <a href="">Colections</a>
+            <a href="" id="brands">Brands</a>
+            <a href="" id="about-us">About Us</a>
+        </div>
+        <div>
+            <a href=""><img src="./Assets/bookmark.svg" id="bookmark"></a>
+            <a href=""><img src="./Assets/Bag.svg" id="Bag"></a>
         </div>
     </header>
 
@@ -82,7 +80,9 @@
         </div>
     </div>
 
-    <button id="view"><p>View All</p> <img src="./Assets/arrow-2.svg" alt=""></button>
+    <button id="view">
+        <p>View All</p> <img src="./Assets/arrow-2.svg" alt="">
+    </button>
 
     <!-- pg 3 -->
 
@@ -106,8 +106,83 @@
     <img src="./Assets/Rectangle 13.png" alt="" id="rec13">
     <img src="./Assets/Rectangle 15.png" alt="" id="rec15">
 
-    <button id="explore1"><p>Explore</p><img src="./Assets/arrow-2.svg" alt=""></button>
+    <button id="explore1">
+        <p>Explore</p><img src="./Assets/arrow-2.svg" alt="">
+    </button>
 
+    <!-- BODY 4 -->
+
+    <h1 id="winter">Winter Collections</h1>
+    <h5 id="consider1">We consider your look and comfort on cold weather.</h5>
+
+    <h5 id="provide">
+        We provide the largest clothing collection for any season. You can choose<br>
+        trendy or classy design according to your preferences. Our services are<br>
+        super fast and we update within 24 hours.
+    </h5>
+
+    <h5 id="serve">
+        Our main aim is to serve our customer with better quality product. We<br>
+        try to understand their needs and provide them within a short period of<br>
+        time. We provide the largest clothing collection for any season. You can<br>
+        choose trendy or classy design according to your preferences. Our<br>
+        services are super fast and we update within 24 hours.
+    </h5>
+
+    <img src="./Assets/Rectangle 18.png" alt="" id="rec18">
+    <img src="./Assets/Rectangle 20.png" alt="" id="rec20">
+
+    <button id="explore2">
+        <p>Explore</p><img src="./Assets/arrow-2.svg" alt="">
+    </button>
+
+    <!-- BODY FINAL -->
+
+    <h1 id="what">What our Customer says</h1>
+
+    <h5 id="value1">We value our customer’s feedback to provide the best service.</h5>
+
+    <img src="./Assets/Rectangle 23.png" alt="" id="rec23">
+
+    <img src="./Assets/group.svg" alt="" id="group">
+
+    <h5 id="ladiesvibe">
+        Ladiesvibe provided me the exact quality product I wanted. I’m very much<br>
+        satisfied by their quick delivery process. They delivered my dress within a day.
+    </h5>
+
+    <h3 id="jane">Jane Bennet</h3>
+    <h5 id="fashion1">Fashion Model</h5>
+
+    <button id="mini-left"><img src="./Assets/mini-left-arrow.svg" alt=""></button>
+    <button id="mini-right"><img src="./Assets/mini-right-arrow.svg" alt=""></button>
+
+    <footer>
+
+        <div id="links1">
+            <h2>Sehlvet</h2>
+            <h5>2023 Sehlvet . All Rights Reserved</h5>
+
+                <a href=""><img src="./Assets/group42.svg" alt=""></a>
+                <a href=""><img src="./Assets/group55.svg" alt=""></a>
+                <a href=""><img src="./Assets/group56.svg" alt=""></a>
+                <a href=""><img src="./Assets/group43.svg" alt=""></a>         
+        </div>
+
+        <div id="buttons">
+            <a href="">Home</a>
+            <a href="">Collections</a>
+            <a href="">Brands</a>
+            <a href="">About Us</a>
+        </div>
+
+        <div id="information">
+            <h4>Contact Us</h4>
+            <h5>525-252-4244</h5>
+            <h5>sehlvet@gmail.com</h5>
+            <h5>www.selvet.com</h5>
+        </div>
+    </footer>
 
 </body>
 
