--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <h5 id="consider">We consider your look and comfort on scorching weather.</h5>
 
-    <h5 id="provide">
+    <h5 id="provide1">
         We provide the largest clothing collection for any season. You can choose<br>
         trendy or classy design according to your
         preferences. Our services are<br>
@@ -162,11 +162,11 @@
         <div id="links1">
             <h2>Sehlvet</h2>
             <h5>2023 Sehlvet . All Rights Reserved</h5>
+            <a href=""><img src="./Assets/group42.svg" alt=""></a>
+            <a href=""><img src="./Assets/group55.svg" alt=""></a>
+            <a href=""><img src="./Assets/group56.svg" alt=""></a>
+            <a href=""><img src="./Assets/group43.svg" alt=""></a>
 
-                <a href=""><img src="./Assets/group42.svg" alt=""></a>
-                <a href=""><img src="./Assets/group55.svg" alt=""></a>
-                <a href=""><img src="./Assets/group56.svg" alt=""></a>
-                <a href=""><img src="./Assets/group43.svg" alt=""></a>         
         </div>
 
         <div id="buttons">
@@ -176,12 +176,13 @@
             <a href="">About Us</a>
         </div>
 
-        <div id="information">
-            <h4>Contact Us</h4>
-            <h5>525-252-4244</h5>
-            <h5>sehlvet@gmail.com</h5>
-            <h5>www.selvet.com</h5>
-        </div>
+        <ul id="information">
+            <h5>Contact Us</h5>
+            <li>525-252-4244</li>
+            <li>sehlvet@gmail.com</li>
+            <li>www.selvet.com</li>
+
+        </ul>
     </footer>
 
 </body>
